Squashed commit of the following:
commit cc2e81e18ee1ff00767d4ba595a2a19ff91b0e73
Author: CrowOnTheEagle <blizkrig553@gmail.com>
Date:   Tue Aug 5 16:46:28 2025 +0900

    20250805; add git actions

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
 	<developers>
 		<developer/>
 	</developers>
+	<configuration>
+		<additionalClasspathElements>
+			<additionalClasspathElement>/.github/workflows</additionalClasspathElement>
+			<additionalClasspathElement>/Study</additionalClasspathElement>
+		</additionalClasspathElements>
+  	</configuration>
 	<scm>
 		<connection/>
 		<developerConnection/>
@@ -55,6 +61,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<sourceDirectory>C:\spring-boot-sw-arcademy\.github\workflows</sourceDirectory>
 	</build>
 
 </project>
